Fixed build number cutoff in build history widget by increasing  available space for listing the build number. Gave the build-row cell build name pane 5% more space, taking it from the build-controls pane.

--- a/war/src/main/less/modules/side-panel-widgets.less
+++ b/war/src/main/less/modules/side-panel-widgets.less
@@ -123,7 +123,7 @@
 }
 
 .build-row-cell .pane.build-name {
-  width: 25%;
+  width: 30%;
   font-weight: bold;
   vertical-align: top;
 }
@@ -133,7 +133,7 @@
 }
 
 .build-row-cell .pane.build-controls {
-  width: 25%;
+  width: 20%;
   text-align: right;
 }
 
